# Google-Ai-studio-

./: README.md  debug.keystore.base64  metadata.json
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  llama_engine.cpp  llama_engine.h  llama_jni.cpp
app/src/main/java/com/example/: MainActivity.kt
app/src/main/java/com/example/data/: AppDatabase.kt  DailyRoutineDao.kt  DailyRoutineData.kt  DailyRoutineState.kt  DatabaseEntities.kt  RoutineRepository.kt
app/src/main/java/com/example/data/llm/native/: LlmProvider.kt  LlmRequest.kt  LlmResult.kt  ModelManager.kt  NativeLlamaEngine.kt  NativeLlamaProvider.kt
app/src/main/java/com/example/ui/: OnboardingScreen.kt  RoutineDashboard.kt  RoutineViewModel.kt
app/src/main/java/com/example/ui/theme/: Color.kt  Theme.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/: GreetingScreenshotTest.kt
